<resources>
    <string name="app_name">alcohol</string>
    <string name="st_sub_title">Nice to meet you, come join our community!
        <br><b>Login</b> if you already have an account</br>
        <br><b>Register</b> to get started with app</br>
</string>
    <string name="st_title">Hello!</string>
    <string name="ill_img">ill_img</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_login">LOGIN</string>
    <string name="login_title">Login to app</string>

    <string name="Login_sub_title">
        <font color="#00C9BB"><b>Login</b></font> if you already have an account.
    </string>

    <string name="login_email">Your email or username</string>
    <string name="login_password">Your password</string>
    <string name="login_forgot_pw">Forgot Password?</string>
    <string name="login_havent_account">
        I don\'t have an account <font color="#00C9B8"><b>Register</b></font>
    </string>
    <string name="register_title">Create an account</string>

    <string name="register_sub_title">
        <font color="#00C9BB"><b>Register</b></font> to get started with app.
    </string>
    <string name="register_email">Your email</string>
    <string name="register_username">Your username</string>
    <string name="register_password">Your password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_btn">REGISTER</string>

    <string name="register_have_account">
        I already have an account <font color="#00C9B8"><b>Login</b></font>
    </string>

    <string name="home_title">Hello!</string>
    <string name="home_sub_title">Welcom to home</string>
    <string name="btn_logout">LOGOUT</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="home_title2">HOME</string>
    <string name="fit_title">FIT</string>
    <string name="profile_title">PROFILE</string>
    <string name="nav_home">Home</string>
    <string name="nav_history">History</string>
    <string name="nav_information">Information</string>
    <string name="nav_share">Share</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_username">username</string>
    <string name="nav_username_gmail_com">username@gmail.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open navigator</string>
    <string name="close_nav">Close navigator</string>
    <string name="share_Fragment">share Fragment</string>
    <string name="username">username</string>
    <string name="medicine">Medicine</string>
    <string name="water_prof">Water</string>
    <string name="pills_prof">Pills</string>
    <string name="pills_profile">pills</string>
    <string name="food_prof">Food</string>
    <string name="kcal_prof">kcal</string>
    <string name="count_kcal">0</string>
    <string name="sleep_prof">Sleep</string>
    <string name="count_sleep">0</string>
    <string name="hours_prof">hours</string>
    <string name="ml_prof">ml</string>
    <string name="count_water">0</string>
    <string name="count_pills">0</string>
    <string name="add">Добавить напоминание</string>






    <string name="pref_notification_message_value">Hey… It\'s time to drink some water…</string>
    <string name="add_info_text">Please provide some information to customize the experience for you…!!</string>
    <string name="str_continue">Continue</string>
    <string name="enter_your_name_hint">Enter your name</string>
    <string name="age_hint">Enter your age</string>
    <string name="weight_hint">Enter your weight in Kg</string>
    <string name="custom_intake_hint">Enter your custom intake target in ml</string>
    <string name="workout_hint">Your daily work out time in min/day</string>
    <string name="wakeup_hint">Your wake up time</string>
    <string name="sleeping_hint">Your Sleep time</string>
    <string name="tagline_text">Lets keep you hydrated…</string>
    <string name="get_started">Get Started</string>
    <string name="edit_info_text">Edit Your Information</string>
    <string name="update">Update</string>
    <string name="notif_setting_header">Notification Settings</string>
    <string name="notif_messsage_hint">Notification Message</string>
    <string name="notif_tone_hint">Notification Tone</string>
    <string name="notif_freq_hint">Notification Frequency</string>
    <string name="walkthrough_text_one">Water is 60 percent of your body weight. Your body depends on water to
        survive.
    </string>
    <string name="walkthough_text_two">Lack of water can lead to dehydration. Even mild dehydration can drain you and
        make you tired.
    </string>
    <string name="walkthrough_text_three">Every cell, tissue and organ in your body needs water to work properly.
    </string>

</resources>