<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:background="@color/primary_color2">

    <!-- TODO: Update blank fragment layout -->


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="638dp"
        android:layout_height="433dp"
        android:layout_marginBottom="96dp"
        android:src="@drawable/baseline_circle"
        app:layout_constraintBottom_toTopOf="@+id/ill_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/ill_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:layout_weight="1"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/tv_medicine_card"
                android:layout_width="312dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="243dp"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:orientation="vertical"
                        android:paddingRight="80dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="40dp"
                            android:fontFamily="@font/raleway_bold"
                            android:text="@string/pills_prof"
                            android:textColor="@color/steps"
                            android:textSize="18sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/pills_prof"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_light"
                                android:text="@string/count_pills"
                                android:textSize="24sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_bold"
                                android:text="@string/pills_profile"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="right"
                        android:background="@drawable/baseline_medication"
                        android:padding="8dp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/tv_food_card"
                android:layout_width="312dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="243dp"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:orientation="vertical"
                        android:paddingRight="80dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="40dp"
                            android:fontFamily="@font/raleway_bold"
                            android:text="@string/food_prof"
                            android:textColor="@color/steps"
                            android:textSize="18sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/food_prof"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_light"
                                android:text="@string/count_kcal"
                                android:textSize="24sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_bold"
                                android:text="@string/kcal_prof"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="right"
                        android:background="@drawable/baseline_food"
                        android:padding="8dp" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/kio5"
        android:layout_width="316dp"
        android:layout_height="163dp"
        android:layout_marginBottom="68dp"
        android:src="@drawable/baseline_account_circle"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="381dp"
        android:layout_height="31dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/username"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226" />

    <androidx.cardview.widget.CardView
        android:id="@+id/tv_water_card"
        android:layout_width="312dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.411">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="243dp"
                android:layout_height="match_parent"
                android:gravity="left"
                android:orientation="vertical"
                android:paddingRight="80dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:fontFamily="@font/raleway_bold"
                    android:text="@string/water_prof"
                    android:textColor="@color/steps"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/water_prof"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/count_water"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/ml_prof"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="right"
                android:background="@drawable/baseline_water"
                android:padding="8dp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/tv_sleep_card"
        android:layout_width="310dp"
        android:layout_height="79dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#2D2D2D"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="243dp"
                android:layout_height="match_parent"
                android:gravity="left"
                android:orientation="vertical"
                android:paddingRight="80dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:fontFamily="@font/raleway_bold"
                    android:text="@string/sleep_prof"
                    android:textColor="@color/steps"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/sleep_prof"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/count_sleep"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/hours_prof"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>


            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="right"
                android:background="@drawable/baseline_bedtime"
                android:padding="8dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>